Adding launcher and world necessary for global navigation in ROS2 (#382)
* Adding global navigation launcher and world

* Changing world and adding tracking camera

* Testing with other worlds

* Removing other world

* Adding follwing cam and normal worlds and adding it to the Cmake

--- a/CustomRobots/CMakeLists.txt
+++ b/CustomRobots/CMakeLists.txt
@@ -131,6 +131,9 @@ install(DIRECTORY
 
   # DRONE_ASSETS
   drone_assets/models
+  
+  # GLOBAL_NAVIGATION
+  taxi_navigator/models
 
   DESTINATION share/${PROJECT_NAME}
 )
